--- a/clook-info.html
+++ b/clook-info.html
@@ -187,7 +187,7 @@
 
       </ol>
       <p>
-        <b> Time Complexity: O ( ) &emsp; Auxiliary Space: O ( ) </b>
+        <b> Time Complexity: O (Nlogn ) &emsp; Auxiliary Space: O (N) </b>
       </p>
 
       <a class="simulate" href="CLOOK/clook.html">Visualize</a>
