--- a/look-info.html
+++ b/look-info.html
@@ -176,7 +176,7 @@
 
       </ol>
       <p>
-        <b> Time Complexity: O ( ) &emsp; Auxiliary Space: O ( ) </b>
+        <b> Time Complexity: O (Nlogn ) &emsp; Auxiliary Space: O (n)</b>
       </p>
 
       <a class="simulate" href="LOOK/look.html">Visualize</a>
