--- a/CSCAN/cscan.html
+++ b/CSCAN/cscan.html
@@ -1,210 +1,307 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
 
+    <script src="cscan.js"></script>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style>
+      .algo {
+        padding-top: 1%; /* reduce top padding */
+        margin-top: 1%; /* reduce top margin */
+        padding-left: 3%;
+        padding-right: 3%;
+        margin-left: 3%;
+        margin-right: 3%;
+        height: 130vh; /* if height is too big, you can reduce this too */
+      }
+    </style>
 
+    <title>C-SCAN</title>
 
-  <script src="cscan.js"></script>
+    <link rel="icon" href="images/favicon.ico" />
 
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
 
-  <style>
-   .algo {
-    padding-top: 1%;  /* reduce top padding */
-    margin-top: 1%;   /* reduce top margin */
-    padding-left: 3%;
-    padding-right: 3%;
-    margin-left: 3%;
-    margin-right: 3%;
-    height: 130vh;    /* if height is too big, you can reduce this too */
-}
-  </style>
-
-
-  <title>C-SCAN</title>
-
-  <link rel="icon" href="images/favicon.ico" />
-
-  <link rel="stylesheet" href="../css/style.css">
-
-</head>
-
-<body>
-  <div class="first">
-    <!-- ============================================
+  <body>
+    <div class="first">
+      <!-- ============================================
   ===================== HEADER =================== -->
 
-    <header class="shadow-md">
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
+      <header class="shadow-md">
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <div class="container">
+            <!-- Logo -->
+            <a class="navbar-brand mr-5" href="../index.html"
+              ><img
+                src="../images/heading.png"
+                href="../index.html"
+                alt=""
+                width="400px"
+            /></a>
 
-          <!-- Logo -->
-          <a class="navbar-brand mr-5" href="../index.html"><img src="../images/heading.png" href="../index.html" alt=""
-              width="400px"></a>
-
-          <!-- menu -->
-          <div class="menu">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <!-- ID = DATA TARGET FOR COLLAPSE BUTTON-->
-              <ul class="navbar-nav ml-auto">
-                <!-- margin left auto: ml-auto: does auto margin to left -->
-                <li class="nav-item">
-                  <a class="nav-link" href="../index.html">Home</a>
-                </li>
-                <!-- dropdown menu -->
-                <li class="nav-item dropdown active">
-                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                    style="cursor: pointer;">Visualize</a>
-                  <div class="dropdown-menu" id="custom-dropdown-menu">
-                    <a class="dropdown-item" href="../FCFS/fcfs.html">FCFS</a>
-                    <a class="dropdown-item" href="../SSTF/sstf.html">SSTF</a>
-                    <a class="dropdown-item" href="../SCAN/scan.html">SCAN</a>
-                    <a class="dropdown-item" href="../CSCAN/cscan.html">C-SCAN</a>
-                    <a class="dropdown-item" href="../LOOK/look.html">LOOK</a>
-                    <a class="dropdown-item" href="../CLOOK/clook.html">C-LOOK</a>
-                  </div>
-                </li>
-              </ul>
+            <!-- menu -->
+            <div class="menu">
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <!-- ID = DATA TARGET FOR COLLAPSE BUTTON-->
+                <ul class="navbar-nav ml-auto">
+                  <!-- margin left auto: ml-auto: does auto margin to left -->
+                  <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Home</a>
+                  </li>
+                  <!-- dropdown menu -->
+                  <li class="nav-item dropdown active">
+                    <a
+                      class="nav-link dropdown-toggle"
+                      data-toggle="dropdown"
+                      aria-haspopup="true"
+                      aria-expanded="false"
+                      style="cursor: pointer"
+                      >Visualize</a
+                    >
+                    <div class="dropdown-menu" id="custom-dropdown-menu">
+                      <a class="dropdown-item" href="../FCFS/fcfs.html">FCFS</a>
+                      <a class="dropdown-item" href="../SSTF/sstf.html">SSTF</a>
+                      <a class="dropdown-item" href="../SCAN/scan.html">SCAN</a>
+                      <a class="dropdown-item" href="../CSCAN/cscan.html"
+                        >C-SCAN</a
+                      >
+                      <a class="dropdown-item" href="../LOOK/look.html">LOOK</a>
+                      <a class="dropdown-item" href="../CLOOK/clook.html"
+                        >C-LOOK</a
+                      >
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <!-- /menu -->
             </div>
-            <!-- /menu -->
           </div>
-        </div>
-      </nav>
-      <!-- /Navbar -->
+        </nav>
+        <!-- /Navbar -->
+      </header>
 
-    </header>
-
-    <!-- ============================================
+      <!-- ============================================
     ===================== MAIN =================== -->
 
-    <div class="algo">
+      <div class="algo">
+        <h1 style="font-family: 'Times New Roman', serif; font-weight: 900">
+          C-SCAN - Simulation
+        </h1>
 
-      <h1 style="font-family: 'Times New Roman', serif; font-weight: 900;">C-SCAN - Simulation</h1>
+        <div class="visualizer tm-timeline-item">
+          <div class="tm-timeline-item-inner">
+            <div class="new tm-timeline-description-wrap">
+              <div class="tm-bg-dark tm-timeline-description">
+                <div class="">
+                  <div
+                    class="form-container-res"
+                    id="ifManualInput"
+                    style="display: block"
+                  >
+                    <label class="col-form-label"
+                      >Enter the request sequence:</label
+                    >
+                    <div class="input-container">
+                      <input
+                        id="Sequence"
+                        placeholder=" "
+                        oninput="resetCLookResult()"
+                      />
+                      <label for="Sequence"
+                        >Eg: 10, 25, 40 (Max input = 199)</label
+                      >
+                      <span class="icon">&#x1F4DD;</span>
+                    </div>
 
-      <div class="visualizer tm-timeline-item">
-        <div class="tm-timeline-item-inner">
+                    <p></p>
+                    <label class="col-form-label"
+                      >Enter the initial head position:</label
+                    >
+                    <div class="input-container">
+                      <input
+                        id="Head"
+                        placeholder=" "
+                        class="form-control"
+                        oninput="resetFcfsResult()"
+                      />
+                      <label for="Head"
+                        >Eg: 20 (Maximum input value = 199)</label
+                      >
+                      <span class="icon">&#x1F4DD;</span>
+                    </div>
 
-          <div class="new tm-timeline-description-wrap">
-            <div class="tm-bg-dark tm-timeline-description">
+                    <p></p>
+                    <lable>Direction: </lable>
+                    <p></p>
 
-
-              <div class="">
-                <div class="form-container-res" id="ifManualInput" style="display:block">
-                  <label class="col-form-label">Enter the request sequence:</label>
-                  <div class="input-container">
-  <input id="Sequence" placeholder=" " oninput="resetCLookResult()" />
-  <label for="Sequence">Eg: 10, 25, 40 (Max input = 199)</label>
-  <span class="icon">&#x1F4DD;</span>
-</div>
-
-                  <p></p>
-                  <label class="col-form-label">Enter the initial head position:</label>
-                  <div class="input-container">
-  <input id="Head" placeholder=" " class="form-control" oninput="resetFcfsResult()" />
-  <label for="Head">Eg: 20 (Maximum input value = 199)</label>
-  <span class="icon">&#x1F4DD;</span>
-</div>
-
-                  <p></p>
-                  <lable>Direction: </lable>
-                  <p></p>
-
-                  <select class="btn btn-outline-primary btn-outline-light dropdown-toggle" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false" style="cursor: pointer;  text-align: left;"
-                    id="Direction">
-                    <option style="background-color: white; color: black;">Left</option>
-                    <option style="background-color: white; color: black">Right</option>
-
-                  </select>
-                  <p></p>
-                  <div class="center-run">
-                    <button class="btn btn-outline-primary btn-outline-light" onclick="cscan_click()" id="CSCAN">Run
-                      CSCAN</button>
+                    <select
+                      class="btn btn-outline-primary btn-outline-light dropdown-toggle"
+                      data-toggle="dropdown"
+                      aria-haspopup="true"
+                      aria-expanded="false"
+                      style="cursor: pointer; text-align: left"
+                      id="Direction"
+                    >
+                      <option style="background-color: white; color: black">
+                        Left
+                      </option>
+                      <option style="background-color: white; color: black">
+                        Right
+                      </option>
+                    </select>
+                    <p></p>
+                    <div class="center-run">
+                      <button
+                        class="btn btn-outline-primary btn-outline-light"
+                        onclick="cscan_click()"
+                        id="CSCAN"
+                      >
+                        Run CSCAN
+                      </button>
+                    </div>
+                    <br />
                   </div>
-                  <br>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="newc tm-bg-dark-light tm-timeline-description">
-        <h3 class="tm-text-orange tm-font-400">
+        <div class="text-center my-4">
+  <button 
+    onclick="goToCompare()"
+    style="
+      background: radial-gradient(circle at top left, #FFDEE9, #B5FFFC, #C2FFD8, #FFD6A5);
+      color: #333;
+      border: none;
+      padding: 14px 30px;
+      font-size: 18px;
+      font-weight: 600;
+      border-radius: 35px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      transition: all 0.3s ease-in-out;
+    "
+    onmouseover="this.style.transform='scale(1.08)'; this.style.boxShadow='0 10px 24px rgba(0, 0, 0, 0.25)'"
+    onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 8px 20px rgba(0,0,0,0.15)'"
+  >
+    Compare All Algorithms
+  </button>
+</div>
 
-          Output of the algorithm:
+        <div class="newc tm-bg-dark-light tm-timeline-description">
+          <h3 class="tm-text-orange tm-font-400">Output of the algorithm:</h3>
 
-        </h3>
-
-        <div class="cscan-output-man" id="ifManualOutput" style="display:block">
-          <label>Total seek time is:&nbsp;</label><span style="font-weight: bolder; color: #ffffff"
-            id="cscan_totalSeekCount"></span>
-          <p></p>
-          <label>Sequence of execution:&nbsp;</label><span style="font-weight: bolder; color: #ffffff"
-            id="cscan_finalOrder"></span>
-          <p></p>
-          <label>Average seek time:&nbsp;</label>
-          <span style="font-weight: bolder; color: #ffffff" id="cscan_averageSeekCount"></span>
-          <p></p>
-          <p></p>
-          <div id="chartContainer" style="display: block"></div>
-          <div id="betweenButton">
-
+          <div
+            class="cscan-output-man"
+            id="ifManualOutput"
+            style="display: block"
+          >
+            <label>Total seek time is:&nbsp;</label
+            ><span
+              style="font-weight: bolder; color: #ffffff"
+              id="cscan_totalSeekCount"
+            ></span>
+            <p></p>
+            <label>Sequence of execution:&nbsp;</label
+            ><span
+              style="font-weight: bolder; color: #ffffff"
+              id="cscan_finalOrder"
+            ></span>
+            <p></p>
+            <label>Average seek time:&nbsp;</label>
+            <span
+              style="font-weight: bolder; color: #ffffff"
+              id="cscan_averageSeekCount"
+            ></span>
+            <p></p>
+            <p></p>
+            <div id="chartContainer" style="display: block"></div>
+            <div id="betweenButton"></div>
           </div>
+
+          <div class="tm-timeline-connector-vertical"></div>
         </div>
-
-        <div class="tm-timeline-connector-vertical"></div>
-
-
-
       </div>
-    </div>
-
-    <!-- ============================================
+ <br><br><br><br>
+      <!-- ============================================
     ===================== FOOTER =================== -->
-    
- 
-    <!--/footer-->
 
-  </div> <!-- first -->
+      <!--/footer-->
+    </div>
+    <!-- first -->
 
-  <!-- Bootstrap core JavaScript -->
-  <!-- jQuery.js -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+    <!-- Bootstrap core JavaScript -->
+    <!-- jQuery.js -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
 
-  <!-- Bootstrap.min.js -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-    crossorigin="anonymous"></script>
-  <!-- Navbar -->
+    <!-- Bootstrap.min.js -->
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Navbar -->
 
-  <script type="text/javascript">
-    var nav = document.querySelector('nav');
+    <script type="text/javascript">
+      var nav = document.querySelector("nav");
 
-    window.addEventListener('scroll', function () {
-      if (window.pageYOffset > 20) {
-        nav.classList.add('navbar-scrolled', 'shadow');
-      } else {
-        nav.classList.remove('navbar-scrolled', 'shadow');
+      window.addEventListener("scroll", function () {
+        if (window.pageYOffset > 20) {
+          nav.classList.add("navbar-scrolled", "shadow");
+        } else {
+          nav.classList.remove("navbar-scrolled", "shadow");
+        }
+      });
+      function goToCompare() {
+        const sequenceInput = document.getElementById("Sequence");
+        const headInput = document.getElementById("Head");
+
+        if (
+          !sequenceInput ||
+          !headInput ||
+          !sequenceInput.value ||
+          !headInput.value
+        ) {
+          alert("Please enter both request sequence and head position.");
+          return;
+        }
+
+        const sequence = sequenceInput.value.trim();
+        const head = headInput.value.trim();
+
+        localStorage.setItem("disk_seq", sequence);
+        localStorage.setItem("disk_head", head);
+        window.location.href = "../compare.html"; // Adjust if file is at a different level
       }
-    });
-  </script>
-
-</body>
-
+    </script>
+  </body>
 </html>
