--- a/SSTF/sstf.html
+++ b/SSTF/sstf.html
@@ -133,6 +133,9 @@
           </div>
         </div>
       </div>
+      <div class="text-center my-4">
+  <button class="btn btn-warning" onclick="goToCompare()">Compare All Algorithms</button>
+</div>
       <div class="newc tm-bg-dark-light tm-timeline-description">
         <h3 class="tm-text-orange tm-font-400">
 
@@ -193,6 +196,22 @@
         nav.classList.remove('navbar-scrolled', 'shadow');
       }
     });
+    function goToCompare() {
+  const sequenceInput = document.getElementById("Sequence");
+  const headInput = document.getElementById("Head");
+
+  if (!sequenceInput || !headInput || !sequenceInput.value || !headInput.value) {
+    alert("Please enter both request sequence and head position.");
+    return;
+  }
+
+  const sequence = sequenceInput.value.trim();
+  const head = headInput.value.trim();
+
+  localStorage.setItem("disk_seq", sequence);
+  localStorage.setItem("disk_head", head);
+  window.location.href = "../compare.html";  // Adjust if file is at a different level
+}
   </script>
 
 </body>
